add money transfer service with logic and modify docker compose info